Colaboratory를 통해 생성됨

--- a/ch3_neural_network.ipynb
+++ b/ch3_neural_network.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "ch3_neural_network.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNqFU3YUv76EJYAgPJPzo7H",
+      "authorship_tag": "ABX9TyM3/q4IEjgTqsdArLhwWbs+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,7 +44,20 @@
         "# Neural Network(신경망)\n",
         "\n",
         "활성화함수(activation function) : 입력 신호의 총합을 출력 신호로 변환하는 함수\n",
-        "<p>ex) 계단함수(step function)\n"
+        "<p>ex) 계단함수(step function)\n",
+        "\n",
+        "\n",
+        "\n",
+        "*   신경망에서는 활성화 함수로 시그모이드 함수와 ReLU 함수 같은 매끄럽게 변화하는 함수를 이용한다.\n",
+        "*   Numpy의 다차원 배열을 잘 사용하면 신경망을 효율적으로 구현할 수 있다.\n",
+        "*   기계학습 문제는 크게 회귀와 분류로 나눌 수 있다.\n",
+        "*   출력층의 활성화 함수로는 회귀에서는 주로 항등함수를, 분류에서는 주로 softmax 함수를 사용한다.\n",
+        "*   분류에서는 출력층의 뉴런 수를 분류하려는 클래스 수와 같게 설정한다.\n",
+        "*   입력 데이터를 묶은 것을 배치라 하며, 추론 처리를 이 배치 단위로 진행하면 결과를 훨씬 빠르게 얻을 수 있다.\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
       ]
     },
     {
@@ -58,7 +71,7 @@
         "import numpy as np\n",
         "import matplotlib.pylab as plt"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -77,7 +90,7 @@
         "t = np.array([1., 2., 3.])\n",
         "1.0 + t"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -107,7 +120,7 @@
       "source": [
         "1./t"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -136,7 +149,7 @@
         "    y = x > 0                   # 배열 x에서 0보다 크면 true, 작으면 false 반환\n",
         "    return y.astype(np.int)     # numpy 배열의 자료형 변환 -> astype(), bool에서 int로 변환하므로 np.int를 인수로 지정"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -153,7 +166,7 @@
       "source": [
         "step_function(np.array([-1., 1., 2.]))"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -181,7 +194,7 @@
         "def step_function(x):\n",
         "    return np.array(x > 0, dtype=np.int)        # numpy 배열에서 0보다 큰 값은 1, 작은 값은 0으로 변환"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -202,7 +215,7 @@
         "plt.ylim(-0.1, 1.1) # y축의 범위 지정\n",
         "plt.show()"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -231,7 +244,7 @@
         "def sigmoid(x):\n",
         "    return 1 / (1 + np.exp(-x))"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -249,7 +262,7 @@
         "x = np.array([-1., 1., 2.])\n",
         "sigmoid(x)"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -283,7 +296,7 @@
         "plt.ylim(-0.1, 1.1)\n",
         "plt.show()"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -312,7 +325,7 @@
         "def relu(x):\n",
         "    return np.maximum(0, x)"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -333,7 +346,7 @@
         "plt.ylim(-0.1, 5.1) # y축의 범위 지정\n",
         "plt.show()"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -366,7 +379,7 @@
         "A = np.array([1, 2, 3, 4])\n",
         "print(A)"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -392,7 +405,7 @@
         "# numpy 배열의 차원\n",
         "np.ndim(A)"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -423,7 +436,7 @@
         "# numpy 배열의 형상, 튜플 return\n",
         "A.shape"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -453,7 +466,7 @@
       "source": [
         "A.shape[0]"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -484,7 +497,7 @@
         "B = np.array([[1, 2], [3, 4], [5, 6]])\n",
         "print(B)"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -511,7 +524,7 @@
       "source": [
         "np.ndim(B)"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -541,7 +554,7 @@
       "source": [
         "B.shape"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -572,7 +585,7 @@
         "A = np.array([[1, 2], [3, 4]])\n",
         "A.shape"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -603,7 +616,7 @@
         "B = np.array([[5, 6], [7, 8]])\n",
         "B.shape"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -633,7 +646,7 @@
       "source": [
         "np.dot(A, B)"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -665,7 +678,7 @@
         "A = np.array([[1, 2, 3], [4, 5, 6]])\n",
         "A.shape"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -696,7 +709,7 @@
         "B = np.array([[1, 2], [3, 4], [5, 6]])\n",
         "B.shape"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -726,7 +739,7 @@
       "source": [
         "np.dot(A, B)"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -758,7 +771,7 @@
         "C = np.array([[1, 2], [3, 4]])\n",
         "C.shape"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -788,7 +801,7 @@
       "source": [
         "A.shape"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -819,7 +832,7 @@
         "# 행렬의 곱연산을 할 때는 대응하는 차원의 원소 수를 일치시켜야 한다\n",
         "np.dot(A, C)"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -855,7 +868,7 @@
         "print(X.shape)\n",
         "print(B1.shape)"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -885,7 +898,7 @@
         "print(A1)\n",
         "print(Z1)"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -919,7 +932,7 @@
         "A2 = np.dot(Z1, W2) + B2\n",
         "Z2 = sigmoid(A2)"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -963,7 +976,7 @@
         "\n",
         "print(Y)"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1023,7 +1036,7 @@
         "y = forward(network, x)\n",
         "print(y)"
       ],
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1050,7 +1063,7 @@
         "exp_a = np.exp(a)\n",
         "print(exp_a)"
       ],
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1076,7 +1089,7 @@
         "sum_exp_a = np.sum(exp_a)\n",
         "print(sum_exp_a)"
       ],
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1102,7 +1115,7 @@
         "y = exp_a / sum_exp_a\n",
         "print(y)"
       ],
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1128,7 +1141,7 @@
         "    y = exp_a / sum_exp_a\n",
         "    return y"
       ],
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1147,7 +1160,7 @@
         "a = np.array([1010, 1000, 990])\n",
         "np.exp(a) / np.sum(np.exp(a))"
       ],
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1189,7 +1202,7 @@
         "c = np.max(a)\n",
         "np.exp(a-c) / np.sum(np.exp(a-c))"
       ],
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1221,7 +1234,7 @@
         "    y = exp_a / sum_exp_a\n",
         "    return y"
       ],
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1240,7 +1253,7 @@
         "y = softmax(a)\n",
         "print(y)"
       ],
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1267,7 +1280,7 @@
         "# 이를 다중 클래스 분류에 사용할 수 있다.\n",
         "np.sum(y)"
       ],
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
