Colaboratory를 통해 생성됨

--- a/ch5_Backpropagation.ipynb
+++ b/ch5_Backpropagation.ipynb
@@ -6,7 +6,7 @@
       "name": "ch5_Backpropagation.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPIjV/3kQq+TPFXE5gTH1ei",
+      "authorship_tag": "ABX9TyMtPmramEuPH+YOKQyXD5yr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -83,7 +83,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "cd32398d-b382-43d4-8dd6-87e93ec17533"
+        "outputId": "6bac84ab-b3ea-404d-d96f-234e536d8ad9"
       },
       "source": [
         "# 순전파\n",
@@ -112,7 +112,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "781a95d8-9648-4fed-bdcd-6ba0f977ec4d"
+        "outputId": "66ff2489-134e-47a3-b514-b8b29c5cbe18"
       },
       "source": [
         "# 역전파\n",
@@ -188,7 +188,7 @@
         "add_fruit_layer = AddLayer()\n",
         "mul_tax_layer = MulLayer()"
       ],
-      "execution_count": 10,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -205,7 +205,7 @@
         "all_price = add_fruit_layer.forward(apple_price, orange_price)\n",
         "price = mul_tax_layer.forward(all_price, tax)"
       ],
-      "execution_count": 16,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -223,7 +223,7 @@
         "dapple, dapple_num = mul_apple_layer.backward(dapple_price)\n",
         "dorange, dorange_num = mul_orange_layer.backward(dorange_price)"
       ],
-      "execution_count": 17,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -235,13 +235,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 50
         },
-        "outputId": "e4fd60e3-820f-4691-d513-0fe202e842b2"
+        "outputId": "d4e2d858-771e-4829-eb5e-75c85d364e5a"
       },
       "source": [
         "print(price)\n",
         "print(dapple_num, dapple, dorange, dorange_num, dtax)"
       ],
-      "execution_count": 18,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -276,7 +276,7 @@
         "        dx = dout\n",
         "        return dx"
       ],
-      "execution_count": 19,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -288,7 +288,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 50
         },
-        "outputId": "58bd50ea-8a38-4a86-81e4-9ad832e2be25"
+        "outputId": "f66d8f45-a084-4e1a-853b-644c8998149f"
       },
       "source": [
         "import numpy as np\n",
@@ -296,7 +296,7 @@
         "x = np.array([[1., -0.5], [-2., 3.]])\n",
         "print(x)"
       ],
-      "execution_count": 21,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -317,13 +317,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 50
         },
-        "outputId": "b08833fc-652e-446a-90d2-ae82cf712485"
+        "outputId": "f93dfb4a-3d94-4b17-db8e-8ea50bc11340"
       },
       "source": [
         "mask = (x <= 0)\n",
         "print(mask)"
       ],
-      "execution_count": 23,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -344,13 +344,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 50
         },
-        "outputId": "4e79f5f9-e153-439c-8d96-ce795f46df69"
+        "outputId": "d53743ce-fcaf-4b9b-b31c-4c68a2cc9c94"
       },
       "source": [
         "out = x.copy()\n",
         "print(out)"
       ],
-      "execution_count": 24,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -371,13 +371,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 50
         },
-        "outputId": "6d86b473-01e3-4f9f-958f-7c8abc66182d"
+        "outputId": "c9fb0b90-ee5d-4ad3-d828-f50b0a4932d9"
       },
       "source": [
         "out[mask] = 0\n",
         "print(out)"
       ],
-      "execution_count": 28,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -393,6 +393,216 @@
       "cell_type": "code",
       "metadata": {
         "id": "HaAPZN6_c0s5",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "class Sigmoid:\n",
+        "    def __init__(self):\n",
+        "        self.out = None\n",
+        "    \n",
+        "    def forward(self, x):\n",
+        "        out = 1 / (1 + np.exp(-x))\n",
+        "        self.out = out\n",
+        "        return out\n",
+        "\n",
+        "    def backward(self, dout):\n",
+        "        dx = dout * (1.0 - self.out) * self.out\n",
+        "        return dx"
+      ],
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XjbAoORhV87-",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 50
+        },
+        "outputId": "d5b5dd25-60ef-4dde-aeca-c0f57f416fa7"
+      },
+      "source": [
+        "X_dot_W = np.array([[0, 0, 0], [10, 10, 10]])\n",
+        "B = np.array([1, 2, 3])\n",
+        "X_dot_W"
+      ],
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[ 0,  0,  0],\n",
+              "       [10, 10, 10]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "q-oCIAyVmXnv",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 50
+        },
+        "outputId": "a3b8cc09-f889-43ce-8e10-6c75b3786fdf"
+      },
+      "source": [
+        "X_dot_W + B"
+      ],
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[ 1,  2,  3],\n",
+              "       [11, 12, 13]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8uoVcOqMmhcr",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 50
+        },
+        "outputId": "8b8bf297-e76a-40b5-b97b-3c829c793c50"
+      },
+      "source": [
+        "dY = np.array([[1, 2, 3], [4, 5, 6]])\n",
+        "dY"
+      ],
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[1, 2, 3],\n",
+              "       [4, 5, 6]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sDCrOMTDm3Oz",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "c58d245b-9da7-4626-888d-8ec4623078f3"
+      },
+      "source": [
+        "dB = np.sum(dY, axis=0)\n",
+        "dB"
+      ],
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([5, 7, 9])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZkcQ03bZm6da",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "d74a407f-5b33-4138-937a-2f2877bfe540"
+      },
+      "source": [
+        "np.sum(dY, axis=1)"
+      ],
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ 6, 15])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vefPOLWnnARR",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "class Affine:\n",
+        "    def __init__(self, W, b):\n",
+        "        self.W = W\n",
+        "        self.b = b\n",
+        "        self.x = None\n",
+        "        self.dW = None\n",
+        "        self.db = None\n",
+        "    \n",
+        "    def forward(self, x):\n",
+        "        self.x = x\n",
+        "        out = np.dot(x, self.W) + b\n",
+        "        return out\n",
+        "    \n",
+        "    def backward(self, dout):\n",
+        "        dx = np.dot(dout, self.W.T)\n",
+        "        self.dW = np.dot(self.x.T, dout)\n",
+        "        self.db = np.dot(dout, axis=0)"
+      ],
+      "execution_count": 24,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0C-7TyUhoLQd",
         "colab_type": "code",
         "colab": {}
       },
