--- a/ch5_Backpropagation.ipynb
+++ b/ch5_Backpropagation.ipynb
@@ -6,13 +6,15 @@
       "name": "ch5_Backpropagation.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMtPmramEuPH+YOKQyXD5yr",
+      "mount_file_id": "1xCL_eZ3UWZBPUFY_oRAGDWjaxoahJChg",
+      "authorship_tag": "ABX9TyMP8KvIyMXd/OWA4Z5DCzpl",
       "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
       "display_name": "Python 3"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -83,7 +85,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "6bac84ab-b3ea-404d-d96f-234e536d8ad9"
+        "outputId": "17b2b273-9fb6-4a5e-ce64-053a6da55026"
       },
       "source": [
         "# 순전파\n",
@@ -112,7 +114,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "66ff2489-134e-47a3-b514-b8b29c5cbe18"
+        "outputId": "0aa143fb-d945-4f6b-a97d-4a374cb08e0e"
       },
       "source": [
         "# 역전파\n",
@@ -235,7 +237,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 50
         },
-        "outputId": "d4e2d858-771e-4829-eb5e-75c85d364e5a"
+        "outputId": "8ba4b2a1-e604-45c8-8f3a-ce0bedf5df29"
       },
       "source": [
         "print(price)\n",
@@ -288,7 +290,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 50
         },
-        "outputId": "f66d8f45-a084-4e1a-853b-644c8998149f"
+        "outputId": "3ee27d54-4aa5-4992-bc94-9da1a65d5641"
       },
       "source": [
         "import numpy as np\n",
@@ -317,7 +319,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 50
         },
-        "outputId": "f93dfb4a-3d94-4b17-db8e-8ea50bc11340"
+        "outputId": "1f932827-4000-4f1c-cb2c-6fc0c76079b8"
       },
       "source": [
         "mask = (x <= 0)\n",
@@ -344,7 +346,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 50
         },
-        "outputId": "d53743ce-fcaf-4b9b-b31c-4c68a2cc9c94"
+        "outputId": "ed6132dc-ec54-4ba4-c66a-4b3503863060"
       },
       "source": [
         "out = x.copy()\n",
@@ -371,7 +373,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 50
         },
-        "outputId": "c9fb0b90-ee5d-4ad3-d828-f50b0a4932d9"
+        "outputId": "93ce96c2-169a-47b7-d5bd-cc494bf36a20"
       },
       "source": [
         "out[mask] = 0\n",
@@ -422,14 +424,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 50
         },
-        "outputId": "d5b5dd25-60ef-4dde-aeca-c0f57f416fa7"
+        "outputId": "4bf6db5d-a2e0-4991-bea3-a7ee35b60875"
       },
       "source": [
         "X_dot_W = np.array([[0, 0, 0], [10, 10, 10]])\n",
         "B = np.array([1, 2, 3])\n",
         "X_dot_W"
       ],
-      "execution_count": 19,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -442,7 +444,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 19
+          "execution_count": 17
         }
       ]
     },
@@ -455,12 +457,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 50
         },
-        "outputId": "a3b8cc09-f889-43ce-8e10-6c75b3786fdf"
+        "outputId": "dcfc65f5-42f3-4a63-afe9-1510764f5953"
       },
       "source": [
         "X_dot_W + B"
       ],
-      "execution_count": 20,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -473,7 +475,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 20
+          "execution_count": 18
         }
       ]
     },
@@ -486,13 +488,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 50
         },
-        "outputId": "8b8bf297-e76a-40b5-b97b-3c829c793c50"
+        "outputId": "27e57d3a-6889-4067-9281-eaaef5d2b8b6"
       },
       "source": [
         "dY = np.array([[1, 2, 3], [4, 5, 6]])\n",
         "dY"
       ],
-      "execution_count": 21,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -505,7 +507,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 21
+          "execution_count": 19
         }
       ]
     },
@@ -518,13 +520,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "c58d245b-9da7-4626-888d-8ec4623078f3"
+        "outputId": "71815672-f8d9-47a5-ac5b-07413cac9adb"
       },
       "source": [
         "dB = np.sum(dY, axis=0)\n",
         "dB"
       ],
-      "execution_count": 22,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -536,7 +538,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 22
+          "execution_count": 20
         }
       ]
     },
@@ -549,12 +551,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "d74a407f-5b33-4138-937a-2f2877bfe540"
+        "outputId": "49dcb2dc-1cc9-42ce-c74b-0d4bead2c514"
       },
       "source": [
         "np.sum(dY, axis=1)"
       ],
-      "execution_count": 23,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -566,7 +568,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 23
+          "execution_count": 21
         }
       ]
     },
@@ -596,13 +598,346 @@
         "        self.dW = np.dot(self.x.T, dout)\n",
         "        self.db = np.dot(dout, axis=0)"
       ],
-      "execution_count": 24,
+      "execution_count": 22,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "0C-7TyUhoLQd",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "class SoftmaxWithLoss:\n",
+        "    def __init__(self):\n",
+        "        self.loss = None\n",
+        "        self.y = None\n",
+        "        self.t = None\n",
+        "    \n",
+        "    def forward(self, x, t):\n",
+        "        self.t = t\n",
+        "        self.y = softmax(x)\n",
+        "        self.loss = cross_entropy_error(self.y, self.t)\n",
+        "        return self.loss\n",
+        "\n",
+        "    def backward(self, dout=1):\n",
+        "        batch_size = self.t.shape[0]\n",
+        "        dx = (self.y - self.t) / batch_size\n",
+        "\n",
+        "        return dx"
+      ],
+      "execution_count": 23,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Gduivy8WqXnT",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "48b5766c-80b3-469f-cadd-f2593a24a74f"
+      },
+      "source": [
+        "cd '/content/drive/My Drive/Colab Notebooks/deep-learning-from-scratch'"
+      ],
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/content/drive/My Drive/Colab Notebooks/deep-learning-from-scratch\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CKzUY9RE0ADK",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import sys, os\n",
+        "sys.path.append(os.pardir)"
+      ],
+      "execution_count": 26,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "atNTxefJrK4T",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "88aae378-2baa-4ae3-9730-b79d1f18a735"
+      },
+      "source": [
+        "print(os.getcwd())"
+      ],
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/content/drive/My Drive/Colab Notebooks/deep-learning-from-scratch\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LDJ451phqPEp",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import numpy as np\n",
+        "from common.gradient import numerical_gradient\n",
+        "from collections import OrderedDict"
+      ],
+      "execution_count": 28,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "A-A7xhI5rx1l",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from common.layers import *"
+      ],
+      "execution_count": 29,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mJ_IRHNMr4iV",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "class TwoLayerNet:\n",
+        "    def __init__(self, input_size, hidden_size, output_size, weight_init_std=0.01):\n",
+        "        # 가중치 초기화\n",
+        "        self.params = {}\n",
+        "        self.params['W1'] = weight_init_std * np.random.randn(input_size, hidden_size)\n",
+        "        self.params['b1'] = np.zeros(hidden_size)\n",
+        "        self.params['W2'] = weight_init_std * np.random.randn(hidden_size, output_size)\n",
+        "        self.params['b2'] = np.zeros(output_size)\n",
+        "\n",
+        "        # 계층 생성\n",
+        "        self.layers = OrderedDict()\n",
+        "        self.layers['Affine1'] = Affine(self.params['W1'], self.params['b1'])\n",
+        "        self.layers['Relu1'] = Relu()\n",
+        "        self.layers['Affine2'] = Affine(self.params['W2'], self.params['b2'])\n",
+        "\n",
+        "        self.lastLayer = SoftmaxWithLoss()\n",
+        "\n",
+        "    def predict(self, x):\n",
+        "        for layer in self.layers.values():\n",
+        "            x = layer.forward(x)\n",
+        "\n",
+        "        return x\n",
+        "\n",
+        "    # x : 입력 데이터, t : 정답 레이블\n",
+        "    def loss(self, x, t):\n",
+        "        y = self.predict(x)\n",
+        "        return self.lastLayer.forward(y, t)\n",
+        "    \n",
+        "    def accuracy(self, x, t):\n",
+        "        y = self.predict(x)\n",
+        "        y = np.argmax(y, axis=1)\n",
+        "        if t.ndim != 1:\n",
+        "            t = np.argmax(t, axis=1)\n",
+        "        \n",
+        "        accuracy = np.sum(y==t) / float(x.shape[0])\n",
+        "        return accuarcy\n",
+        "    \n",
+        "    # x : 입력 데이터, t : 정답 레이블\n",
+        "    def numerical_gradient(self, x, t):\n",
+        "        loss_W = lambda W: self.loss(x, t)\n",
+        "\n",
+        "        grads = {}\n",
+        "        grads['W1'] = numerical_gradient(loss_W, self.params['W1'])\n",
+        "        grads['b1']  = numerical_gradient(loss_W, self.params['b1'])\n",
+        "        grads['W2'] = numerical_gradient(loss_W, self.params['W2'])\n",
+        "        grads['b2'] = numerical_gradient(loss_W, self.params['b2'])\n",
+        "        return grads\n",
+        "    \n",
+        "    def gradient(self, x, t):\n",
+        "        # 순전파\n",
+        "        self.loss(x, t)\n",
+        "\n",
+        "        # 역전파\n",
+        "        dout = 1\n",
+        "        dout = self.lastLayer.backward(dout)\n",
+        "        \n",
+        "        layers = list(self.layers.values())\n",
+        "        layers.reverse()\n",
+        "        for layer in layers:\n",
+        "            dout = layer.backward(dout)\n",
+        "\n",
+        "        # 결과 저장\n",
+        "        grads = {}\n",
+        "        grads['W1'] = self.layers['Affine1'].dW\n",
+        "        grads['b1'] = self.layers['Affine1'].db\n",
+        "        grads['W2'] = self.layers['Affine2'].dW\n",
+        "        grads['b2'] = self.layers['Affine2'].db\n",
+        "\n",
+        "        return grads"
+      ],
+      "execution_count": 37,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "icYcWox6tfe4",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 84
+        },
+        "outputId": "b5633f63-ccc9-46d7-bebb-dbe724488dc9"
+      },
+      "source": [
+        "from dataset.mnist import load_mnist\n",
+        "from ch04.two_layer_net import TwoLayerNet\n",
+        "\n",
+        "# 데이터 읽기\n",
+        "(x_train, t_train), (x_test, t_test) = load_mnist(normalize=True, one_hot_label = True)\n",
+        "\n",
+        "network = TwoLayerNet(input_size=784, hidden_size = 50, output_size=10)\n",
+        "\n",
+        "x_batch = x_train[:3]\n",
+        "t_batch = t_train[:3]\n",
+        "\n",
+        "grad_numerical = network.numerical_gradient(x_batch, t_batch)\n",
+        "grad_backprop = network.gradient(x_batch, t_batch)\n",
+        "\n",
+        "# 각 가중치의 차이의 절댓값을 구한 후, 그 절댓값들의 평균을 낸다.\n",
+        "for key in grad_numerical.keys():\n",
+        "    diff = np.average(np.abs(grad_backprop[key] - grad_numerical[key]))\n",
+        "    print(key+\":\" + str(diff))"
+      ],
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "W1:1.9532785151498752e-10\n",
+            "b1:9.223543193705987e-10\n",
+            "W2:7.21379171779446e-08\n",
+            "b2:1.443377642643129e-07\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5_oXp71BvgRF",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "(x_train, t_train), (x_test, t_test) = load_mnist(normalize=True, one_hot_label=True)\n",
+        "network = TwoLayerNet(input_size = 784, hidden_size=50, output_size=10)\n",
+        "\n",
+        "iters_num = 10000\n",
+        "train_size = x_train.shape[0]\n",
+        "batch_size = 100\n",
+        "learning_rate = 0.1\n",
+        "\n",
+        "train_loss_list = []\n",
+        "train_acc_list = []\n",
+        "test_acc_list = []\n",
+        "\n",
+        "iter_per_epoch = max(train_size/batch_size, 1)"
+      ],
+      "execution_count": 35,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "h7MjrhvnweI8",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 302
+        },
+        "outputId": "becd7cb9-fc5b-4f4d-d6e4-91aa273d6a3f"
+      },
+      "source": [
+        "for i in range(iters_num):\n",
+        "    batch_mask = np.random.choice(train_size, batch_size)\n",
+        "    x_batch = x_train[batch_mask]\n",
+        "    t_batch = t_train[batch_mask]\n",
+        "\n",
+        "    # 오차역전파법으로 기울기를 구한다.\n",
+        "    grad = network.gradient(x_batch, t_batch)\n",
+        "\n",
+        "    # 갱신\n",
+        "    for key in ('W1', 'b1', 'W2', 'b2'):\n",
+        "        network.params[key] -= learning_rate * grad[key]\n",
+        "\n",
+        "    loss = network.loss(x_batch, t_batch)\n",
+        "    train_loss_list.append(loss)\n",
+        "\n",
+        "    if i % iter_per_epoch == 0:\n",
+        "        train_acc = network.accuracy(x_train, t_train)\n",
+        "        test_acc = network.accuracy(x_test, t_test)\n",
+        "        train_acc_list.append(train_acc)\n",
+        "        test_acc_list.append(test_acc)\n",
+        "        print(train_acc, test_acc)"
+      ],
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0.09751666666666667 0.0974\n",
+            "0.8011 0.8037\n",
+            "0.8796833333333334 0.883\n",
+            "0.8987166666666667 0.9017\n",
+            "0.9071166666666667 0.9103\n",
+            "0.9128 0.9146\n",
+            "0.9172166666666667 0.9197\n",
+            "0.9221 0.9232\n",
+            "0.9254833333333333 0.9278\n",
+            "0.9288333333333333 0.9293\n",
+            "0.9317666666666666 0.9317\n",
+            "0.9337333333333333 0.9323\n",
+            "0.9371166666666667 0.9363\n",
+            "0.93925 0.9383\n",
+            "0.9413666666666667 0.9409\n",
+            "0.94365 0.9433\n",
+            "0.9458166666666666 0.9425\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kcsbrxRCxNci",
         "colab_type": "code",
         "colab": {}
       },
